Patch by Tsarko Yaroslav <eriktsarko@googlemail.com> on 2012-05-17 Reviewed by Yury Semikhatsky.

Bug 71271: [Qt] Web Inspector: local inspector client UI becomes unresponsive on debugger pause during
https://bugs.webkit.org/show_bug.cgi?id=71271

Web Inspector should not belong to any other page groups since it is a specialized debugger window.
The reason for this change is when debugger pauses web page it pauses all the pages in the page group of debuggee.
This leads that Web Inspector front-end is paused too leading to locked Web Inspector GUI (bugzilla ticket 71271).

* WebCoreSupport/InspectorClientQt.cpp:
(WebCore::InspectorClientQt::openInspectorFrontend):

Canonical link: https://commits.webkit.org/104347@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117440 268f45cc-cd09-0410-ab3c-d52691b4dbfc